[package]
name = "json_diff"
version = "0.2.0"
authors = ["ksceriath"]
edition = "2021"
license = "Unlicense"
description = "A small diff tool utility for comparing jsons"
readme = "README.md"
homepage = "https://github.com/ksceriath/json-diff"
repository = "https://github.com/ksceriath/json-diff"
keywords = ["cli", "diff", "json"]
categories = ["command-line-utilities"]

[lib]
name = "json_diff"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "json_diff"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
vg_errortools = "0.1"
serde_json = "1.0"
maplit = "1.0"
clap = {version = "4.4", features = ["derive"]}
